# Text-tokenizer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
example/: CMakeLists.txt  result_reference.txt  seg.data  test.txt  textSegmenter.cc
lib/: CMakeLists.txt  Segment.cc  Segment.h  normalisations.cc  normalisations.h  segmenter.cc  segmenter.h  ucd2cc.py  unicode_tools.cc  unicode_tools.h
